k8s/platform/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecg-platform-api
  namespace: ecg-clinical-research
  labels:
    app.kubernetes.io/name: ecg-platform-api
    app.kubernetes.io/part-of: ecg-health-platform
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: ecg-platform-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ecg-platform-api
        app.kubernetes.io/part-of: ecg-health-platform
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
      containers:
        - name: api
          image: ghcr.io/sreekar1992/ecg-health-platform:replace-with-immutable-tag
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: model
              mountPath: /models
              readOnly: true
            - name: tmp
              mountPath: /tmp
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "2"
              memory: "2Gi"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          startupProbe:
            httpGet:
              httpHeaders:
                - name: Host
                  value: ecg-platform-api
              path: /healthz
              port: http
            failureThreshold: 30
            periodSeconds: 5
          livenessProbe:
            httpGet:
              httpHeaders:
                - name: Host
                  value: ecg-platform-api
              path: /healthz
              port: http
            periodSeconds: 15
          readinessProbe:
            httpGet:
              httpHeaders:
                - name: Host
                  value: ecg-platform-api
              path: /readyz
              port: http
            periodSeconds: 10
      volumes:
        - name: model
          persistentVolumeClaim:
            claimName: ecg-platform-models
        - name: tmp
          emptyDir: {}
