k8s/platform/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecg-platform-worker
  namespace: ecg-clinical-research
  labels:
    app.kubernetes.io/name: ecg-platform-worker
    app.kubernetes.io/part-of: ecg-health-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ecg-platform-worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ecg-platform-worker
        app.kubernetes.io/part-of: ecg-health-platform
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
      containers:
        - name: worker
          image: ghcr.io/sreekar1992/ecg-health-platform:replace-with-immutable-tag
          imagePullPolicy: IfNotPresent
          command: ["ecg-health-worker"]
          volumeMounts:
            - name: model
              mountPath: /models
              readOnly: true
            - name: tmp
              mountPath: /tmp
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "2"
              memory: "2Gi"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
      volumes:
        - name: model
          persistentVolumeClaim:
            claimName: ecg-platform-models
        - name: tmp
          emptyDir: {}
